[project]
name = "youtube-tools"
version = "0.1.0"
description = "Pull transcripts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "youtube-transcript-api>=1.2.3",
    "scrapetube>=2.5.1",
    "yt-dlp>=2025.11.12",
    "ruamel-yaml>=0.18.16",
    "pyyaml>=6.0.3",
    "boto3>=1.41.5",
]
